# maskprompt

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/maskprompt-core/: Cargo.toml  README.md
crates/maskprompt-core/src/: lib.rs
crates/maskprompt-py/: Cargo.toml
crates/maskprompt-py/src/: lib.rs
python/maskprompt/: __init__.py  _native.pyi
tests/python/: test_maskprompt.py
