[workspace]
members = ["crates/maskprompt-core", "crates/maskprompt-py"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Mukunda Katta"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/MukundaKatta/maskprompt"
homepage = "https://github.com/MukundaKatta/maskprompt"
documentation = "https://docs.rs/maskprompt-core"
readme = "README.md"
keywords = ["pii", "redaction", "llm", "compliance", "privacy"]
categories = ["text-processing", "science"]

[workspace.dependencies]
# Standard regex crate. Use the default features so we get unicode and the
# DFA backend that makes the email/IPv6 patterns reasonable to express.
regex = "1.11"
# Aho-Corasick for matching user-supplied keyword/phrase lists in linear time
# regardless of the number of needles. Materially faster than a single big
# alternation regex once the list has more than a handful of needles.
aho-corasick = "1.1"
# Stable redaction tags: a blake3 hash truncated to 8 chars lets ops verify
# "this user appears in 4 different runs" without recovering the original.
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
