[package]
name = "maskprompt-core"
description = "Pure-Rust core for maskprompt: PII redaction for LLM prompts."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
regex = { workspace = true }
aho-corasick = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
