[package]
name = "maskprompt-py"
description = "PyO3 bindings for maskprompt-core."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false

[lib]
name = "maskprompt_native"
crate-type = ["cdylib"]

[dependencies]
maskprompt-core = { path = "../maskprompt-core", version = "0.1.0" }
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
